--- a/backend/secao-06-node-js-orm/day-01-ex-02/package.json
+++ b/backend/secao-06-node-js-orm/day-01-ex-02/package.json
@@ -17,7 +17,12 @@
     "sequelize": "^6.30.0"
   },
   "devDependencies": {
+    "chai": "4.3.4",
+    "chai-http": "4.3.0",
+    "mocha": "10.0.0",
     "nodemon": "^2.0.22",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "sequelize-test-helpers": "1.4.3",
+    "sinon": "14.0.0"
   }
 }
