--- a/backend/secao-06-node-js-orm/day-01-ex-01/package.json
+++ b/backend/secao-06-node-js-orm/day-01-ex-01/package.json
@@ -2,16 +2,18 @@
   "name": "day-01-ex-01",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mysql2": "^3.2.0",
     "sequelize": "^6.30.0"
